Aggiunta variabile token

--- a/ansible/roles/cluster/templates/cluster-member.yaml.j2
+++ b/ansible/roles/cluster/templates/cluster-member.yaml.j2
@@ -8,4 +8,4 @@ cluster:
     value: ""
     description: '"source" property for storage pool "local"'
   server_address: {{ server_address }}:8443
-  cluster_token: ""
+  cluster_token: {{ token }}
