--- a/ansible/roles/incus/templates/bootstrap.yaml.j2
+++ b/ansible/roles/incus/templates/bootstrap.yaml.j2
@@ -1,5 +1,5 @@
 config:
-  core.https_address: {{ cluster_address }}:8443
+  core.https_address: {{ server_1 }}:8443
 networks:
 - name: incusbr0
   type: bridge
