Aggiunta rete incusbr0 come rete del profilo di default

--- a/ansible/roles/incus/templates/bootstrap.yaml.j2
+++ b/ansible/roles/incus/templates/bootstrap.yaml.j2
@@ -19,6 +19,11 @@ profiles:
       path: /
       pool: local
       type: disk
+    eth0:
+      name: eth0
+      nictype: bridged
+      parent: incusbr0
+      type: nic
 cluster:
   server_name: {{ server_name }}
   enabled: true
