--- a/ansible/roles/incus/templates/server.yaml.j2
+++ b/ansible/roles/incus/templates/server.yaml.j2
@@ -19,3 +19,8 @@ profiles:
       path: /
       pool: local
       type: disk
+    eth0:
+      name: eth0
+      nictype: bridged
+      parent: incusbr0
+      type: nic
