Fixed bug because the variable token was the whole the output of the command that generates it

--- a/ansible/roles/incus/templates/cluster-member.yaml.j2
+++ b/ansible/roles/incus/templates/cluster-member.yaml.j2
@@ -7,4 +7,4 @@ cluster:
     key: source
     value: ""
   server_address: {{ server_address }}:8443
-  cluster_token: {{ token }}
+  cluster_token: {{ token.stdout }}
